--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "pdf-compressor-backend",
-  "version": "1.0.0",
-  "description": "A simple Node.js server for compressing PDFs using Ghostscript",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "name": "medical-ocr-server",
+    "version": "1.0.0",
+    "main": "server.js",
+    "scripts": {
+      "start": "node server.js",
+      "dev": "nodemon server.js"
+    },
+    "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "multer": "^1.4.5-lts.1",
+      "tesseract.js": "^4.1.1"
+    },
+    "devDependencies": {
+      "nodemon": "^2.0.20"
+    }
   }
-}
