--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "medical-ocr-server",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "multer": "^1.4.5-lts.1",
-      "tesseract.js": "^4.1.1"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.20"
-    }
+  "name": "medical-ocr-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "tesseract.js": "^4.1.1",
+    "pdf2pic": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
+}
