--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "tesseract.js": "^4.1.1",
-    "pdf2pic": "^3.0.0"
-  },
+"dependencies": {
+  "cors": "^2.8.5",
+  "dotenv": "^16.0.3",
+  "express": "^4.18.2",
+  "multer": "^1.4.5-lts.1",
+  "tesseract.js": "^4.1.1",
+  "pdf-parse": "^1.1.1"
+},
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
