--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "cors": "^2.8.5",
   "dotenv": "^16.0.3",
   "express": "^4.18.2",
+  "file-type": "^18.0.0",
   "multer": "^1.4.5-lts.1",
   "tesseract.js": "^4.1.1",
   "pdf-parse": "^1.1.1"
