--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-"dependencies": {
-  "cors": "^2.8.5",
-  "dotenv": "^16.0.3",
-  "express": "^4.18.2",
-  "file-type": "^18.0.0",
-  "multer": "^1.4.5-lts.1",
-  "tesseract.js": "^4.1.1",
-  "pdf-parse": "^1.1.1"
-},
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "file-type": "^18.0.0",
+    "multer": "^1.4.5-lts.1",
+    "tesseract.js": "^4.1.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-lib": "^1.17.1",
+    "pdf2pic": "^2.1.7",
+    "sharp": "^0.32.0",
+    "mime-types": "^2.1.35"
+  },
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
