--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^2.1.7",
     "sharp": "^0.32.0",
-    "mime-types": "^2.1.35"
+    "mime-types": "^2.1.35",
+        "pdf-to-text": "^1.1.0"
+
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
