--- a/package.json
+++ b/package.json
@@ -1,28 +1,54 @@
 {
   "name": "medical-ocr-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "description": "Advanced OCR server with PDF and image support",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "lint": "eslint .",
+    "prepublish": "npm run lint && npm test"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "file-type": "^18.0.0",
+    "file-type": "^18.1.0",
     "multer": "^1.4.5-lts.1",
     "tesseract.js": "^4.1.1",
     "pdf-parse": "^1.1.1",
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^2.1.7",
-    "sharp": "^0.32.0",
+    "sharp": "^0.32.6",
     "mime-types": "^2.1.35",
-    "pdf-to-text": "^0.0.7"
-
+    "tmp-promise": "^3.0.3",
+    "p-limit": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+    "nodemon": "^3.0.2",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  },
+  "keywords": [
+    "ocr",
+    "pdf",
+    "medical",
+    "tesseract",
+    "image-processing"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/medical-ocr-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/medical-ocr-server/issues"
+  },
+  "homepage": "https://github.com/yourusername/medical-ocr-server#readme"
 }
