--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medical-ocr-server",
+  "name": "ocr-server",
   "version": "2.0.0",
   "description": "Advanced OCR server with PDF and image support",
   "main": "server.js",
@@ -9,6 +9,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -32,17 +33,7 @@
   "keywords": [
     "ocr",
     "pdf",
-    "medical",
     "tesseract",
     "image-processing"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/medical-ocr-server.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/medical-ocr-server/issues"
-  },
-  "homepage": "https://github.com/yourusername/medical-ocr-server#readme"
+  ]
 }
